--- a/scss/_pre.scss
+++ b/scss/_pre.scss
@@ -6,37 +6,26 @@ pre {
   border-radius: 8px;
   background: 
     linear-gradient(to top, lighten($ilblue, 55%) 50%, #FFF 50%);
-    background-position: 0 1.8rem;
+    background-position: 1.8em 1.8em;
     background-clip: padding-box;
     background-attachment: local;
   width: 98%;
   margin: 0 1vw 20px;
   overflow: scroll;
-  font-size: 1.4rem;
+  font-size: 1.5em;
   box-sizing: border-box;
-  padding-top: 1.8vh;
-  line-height: 4vh; 
-  background-size: 100% 8vh; 
-  font-size: 3.5vh; 
+  padding-top: 1.8em;
+  background-size: 100% 2.8em;
   position: relative; 
   top: -10px;
   border: 1px solid $lightborders;
-
-
-
-
+  line-height: 1.4em;
+  max-height: 90vh;
+  overflow-y: scroll;
 b, em {
   font-weight: normal;
   font-style: normal;
-  color: $ilblue;
-  font-weight: bold;
-  transition: 200ms;
-  &:hover {
-    display: inline-block;
-    transform: scale(1.5);
-    background-color: rgba(255,255,255,0.8);
-    transform-origin: left center;
-  }
+  color: $red;
 }
 &.allcode {
   height: 90vh;
