--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,5 +3,5 @@ $darken: rgba(0,0,0,0.1);
 $background: #ffffff;
 $lightborders: #ccc;
 $shadows: 3px 3px 3px rgba(0,0,0,0.2);
-$red: #f00;
-$white: #fff;
+$red: #ff0000;
+$white: #ffffff;
